[project]
name = "zarr-perf-testing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
discover-chunks = "discover_chunks:main"
bench = "bench:main"
bench-concurrency = "bench_concurrency:main"
report = "report:main"
report-concurrency = "report_concurrency:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
